fix: global ui-spinner not showing on mobile browsers
It wasn't problem on mobile browsers.
When ui spinner placed in app component was behind preview of the pdf.
It did't occure on wide screens hence looked as issue on mobile browsers only.

--- a/src/app/shared/ui-spinner.component.css
+++ b/src/app/shared/ui-spinner.component.css
@@ -1,4 +1,6 @@
 :host {
+  /* should be on top of everyting */
+  z-index: 1000000;
   position: fixed;
   top: 50%;
   left: 50%;
